--- a/page_search.html
+++ b/page_search.html
@@ -16,7 +16,7 @@
 <title>Toy R not Us Website</title>
 </head>
 <body>
-<h1>Search Toy</h1>
+<p style="font-size:25px;">Search Toy</p>
 <form action="/action_page.php">
     <label for="select_age">Select age</label>
     <input type="number" id="select_age" name="select_age" min="1" max="200">
