--- a/page_product_detail.html
+++ b/page_product_detail.html
@@ -1,1 +1,71 @@
-<h1>sa</h1>
+<!DOCTYPE html>
+<html lang="en">  
+<head>
+<title>Toy R not Us Website</title>
+</head>
+<style>
+
+p {text-align: left;}
+
+form {
+  margin-right: 100px;
+}
+
+label {
+  margin-right: 5px;
+}
+
+.item1 { grid-area: header; }
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.item4 { grid-area: right; }
+.item5 { grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main right right'
+    'menu footer footer footer footer footer';
+  gap: 2px;
+  background-color: #ffffff;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 15px 0;
+  font-size: 12px;
+}
+
+</style>
+<body>
+
+    <div class="grid-container">
+        <div class="item1">
+            <p style="font-size:25px;">Toy Name</p>
+        </div>
+        <div class="item2">
+            <img src="https://www.lego.com/cdn/cs/set/assets/bltd359ecde79ff730e/21244_alt1.png" 
+            alt="toys01" width="190" height="200">
+        </div>
+        <div class="item3">
+            <p>Brand: Lego</p>
+            <p>Gender: Any</p>
+            <p>Age: 8+</p>
+            <p>Price: 20$</p>
+            <p>Shoping Method: Cash on Delivery</p>
+            <p style="color:red"><b style="font-size:15px;">In Stock/ Out of Stock</b></p>
+            <form action="/action_page.php">
+              <label for="quantity">Quantity</label>
+              <input type="number" id="quantity" name="quantity" min="1" max="10">
+            </form>  
+          </div>  
+        <div class="item4"></div>
+        <div class="item5">
+          <button>Add to cart</button>
+        </div>
+      </div>
+</body>
+</html>
