--- a/page_shopping_cart.html
+++ b/page_shopping_cart.html
@@ -75,7 +75,8 @@ table {
                           <form action="/action_page.php">
                           <label for="quantity"></label>
                           <input type="number" id="quantity" name="quantity" min="1" max="10">
-                        </form>  </th>
+                        </form>
+                    </th>
                     <td style="text-align:right">100.00</td>
                   </tr>
             </table>  
