[Edited]: เปลี่ยน สี Background Table

--- a/page_shopping_cart.html
+++ b/page_shopping_cart.html
@@ -34,7 +34,7 @@ table {
     'main main main main main main'
     'footer footer footer footer right right';
   gap: 2px;
-  background-color: #f4eaea;
+  background-color: #ffffff;
   padding: 10px;
 }
 
