[Updated]: เขียน HTML

--- a/page_shipping.html
+++ b/page_shipping.html
@@ -15,7 +15,7 @@ table {
           width: 100%;
         }      
         td, th {
-          border: 1px solid #dddddd;
+          border: px solid #dddddd;
           text-align: left;
           padding: 25px;
         }
@@ -33,7 +33,7 @@ table {
     'menu menu menu menu menu menu'
     'footer footer footer footer footer footer';
   gap: 2px;
-  background-color: #f1e9e9;
+  background-color: #ffffff;
   padding: 10px;
 }
 
